deployment/sa-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-frontend
  namespace: rahul
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sa-frontend
