deployment/sa-logic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-logic
  namespace: rahul
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: sa-logic
