deployment/sa-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-webapp
  namespace: rahul
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sa-webapp
