deployment/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-backend-ingress
  namespace: rahul
  annotations:
    kubernetes.io/ingress.class: nginx
    
spec:
  rules:
    - host: rahul-sa-backend.rtd.squareops.co.in
      http:
        paths:
          - path: /sentiment
            pathType: Prefix
            backend:
              service:
                name: sa-webapp
                port:
                  number: 8080
