deployment/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-ingress
  namespace: rahul
  annotations:
    kubernetes.io/ingress.class: nginx
    
spec:
  rules:
    - host: rahul-sa.rtd.squareops.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sa-frontend
                port:
                  number: 80
